fixed tab-content overflow

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,6 +22,9 @@ body{
 .gi-3x{font-size: 3em;}
 .gi-4x{font-size: 4em;}
 .gi-5x{font-size: 5em;}
+.no-margin{
+  margin:0;
+}
 .container-yield {
   margin-top: 51px;
 }
